# backend/internal/infra/http/response.go
@@ -4,20 +4,20 @@ import (
 	"encoding/json"
 	"net/http"
 
+	"github.com/vanillazen/stl/backend/internal/sys/config"
 	"github.com/vanillazen/stl/backend/internal/sys/errors"
 )
 
 type (
 	APIResponse struct {
-		Success bool        `json:"success"`
-		Message string      `json:"message,omitempty"`
-		Count   int         `json:"count,omitempty"`
-		Pages   int         `json:"pages,omitempty"`
-		Data    interface{} `json:"data,omitempty"`
-		Error   APIError    `json:"error,omitempty"`
+		Count  int         `json:"count,omitempty"`
+		Pages  int         `json:"pages,omitempty"`
+		Data   interface{} `json:"data,omitempty"`
+		Status `json:"error,omitempty"`
 	}
 
-	APIError struct {
+	Status struct {
+		OK          bool
 		Message     string `json:"message,omitempty"`
 		InternalErr string `json:"internalError,omitempty"`
 	}
@@ -30,11 +30,13 @@ func (h *APIHandler) handleSuccess(w http.ResponseWriter, payload interface{}, c
 	}
 
 	response := APIResponse{
-		Success: true,
-		Message: m,
-		Count:   count,
-		Pages:   pages,
-		Data:    payload,
+		Count: count,
+		Pages: pages,
+		Data:  payload,
+		Status: Status{
+			OK:      true,
+			Message: m,
+		},
 	}
 
 	w.WriteHeader(http.StatusOK)
@@ -46,13 +48,26 @@ func (h *APIHandler) handleSuccess(w http.ResponseWriter, payload interface{}, c
 	return
 }
 
-func (h *APIHandler) handleError(w http.ResponseWriter, handlerError error) {
-	response := APIResponse{
-		Success: false,
-		Message: handlerError.Error(),
+func (h *APIHandler) handleError(w http.ResponseWriter, handlerError error, message ...string) {
+	var msg string
+	if len(message) > 0 {
+		msg = message[0]
 	}
 
-	h.Log().Error("handler error:", handlerError)
+	var intErr string
+	if h.Cfg().GetBool(config.Key.APIErrorExposeInt) {
+		intErr = handlerError.Error()
+	}
+
+	response := APIResponse{
+		Status: Status{
+			OK:          false,
+			Message:     msg,
+			InternalErr: intErr,
+		},
+	}
+
+	h.Log().Errorf("handler error:\n%s", errors.Stacktrace(handlerError))
 
 	w.WriteHeader(http.StatusInternalServerError)
 	err := json.NewEncoder(w).Encode(response)
